# Todo-Api

./: .env  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
migrations/2020-08-31-103110_create_todos/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/models/: mod.rs  todo.rs
