[package]
name = "todo_api"
version = "0.1.0"
authors = ["Ilson Roberto Balliego Junior"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
actix-cors = "0.2"

chrono = { version = "0.4", features=["serde"] }
dotenv = "0.15.0"
futures = "0.3"
serde = "1.0.115"  
serde_json = "1.0"
tokio = { version = "0.2", features=["blocking"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"